--- a/css/style.css
+++ b/css/style.css
@@ -4,84 +4,350 @@
     box-sizing: border-box;
 }
 
-
 body {
     background-image: linear-gradient(264deg, #868fa5, #b086d9);
     color: white;
-    font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     display: flex;
-    flex-direction:column ;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-main {
-    max-width: 600px;
+.app {
+    display: flex;
+    flex-flow: column;
+    width: 100vw;
+    height: 100vh;
 }
 
-.input-group {
-    margin: 1rem;
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    color: white;
 }
 
-.list-group {
-    min-height: 100px;
+.list-form {
+    margin: 10px 15px;
+    display: flex;
+    justify-content: center;
+}
+
+.list-form input {
+    margin-right: 10px;
+    padding: 5px;
+    font-size: 24px;
+    border: 0 solid #868fa5;
+
+
+}
+
+.list-form button {
+    background-color: #fbeee0;
+    border: 2px solid #771b80;
+    border-radius: 30px;
+    box-shadow: #000442 4px 4px 0 0;
+    color: #c5470c;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 16px;
+    padding: 0 18px;
+    line-height: 37px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.list-form button:hover {
+    background-color: #fff;
+}
+
+.list-form button:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(2px, 2px);
+}
+
+.lists  {
+    display: flex;
+    flex: 1;
+    width: fit-content;
+    /* overflow-x: scroll; */
+}
+
+.lists .list {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    width: 100%;
+    min-width: 250px;
+    max-width: 350px;
+    height: 100%;
+    min-height: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    margin: 0 15px;
+    padding: 8px;
+    transition: all 0.2s linear;
+}
+
+.lists .list .list-item {
+    background-color: #f3f3f3;
+    border-radius: 8px;
+    padding: 15px 20px;
+    text-align: center;
+    margin: 4px 0;
+    color: #868fa5;
+}
+
+.list-title {
+    text-align: center;
+    padding: 8px;
+    background: #fbeee0;
+    margin: -8px -8px 6px;
+    /*color: #b086d9;*/
+    color: #c5470c;
+    white-space: nowrap;
+    font-size: 2em;
+    font-family: sans-serif;
+    letter-spacing: 0.1em;
+    transition: 0.3s;
+    text-shadow: 1px 2px 0 rgba(176, 134, 217, 0.58), 5px 13px 15px black;
+}
+
+.list-title:hover {
+    transition: 0.3s;
+    transform: scale(1.0) translate(0.5%, 0.5%);
+    text-shadow: 1px -1px 0 rgb(176, 134, 217), 1px -3px 0, 5px -7px 15px rgba(134, 38, 240, 0.55), 5px -13px 25px rgb(181, 126, 234);
+}
+
+
+.task-form {
+    margin: 4px;
+}
+
+.task-form input {
+    transform: rotate(3deg);
+    border: 0 solid #E5E7EB;
+    padding: 7px;
+    font-size: 15px;
+}
+
+.task-form button {
+    width: 100px;
+    padding: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: rgba(149, 200, 243, 0.52);
+    border: 0 solid #E5E7EB;
+    box-sizing: border-box;
+    color: #000000;
+    margin: 5px;
+    justify-content: center;
+    line-height: 1.75rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none rgb(0, 0, 0) solid;
+    text-decoration-thickness: auto;
+    max-width: 460px;
+    cursor: pointer;
+    transform: rotate(353deg);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.task-form button:focus {
+    outline: 0;
+}
+
+.task-form button:after {
+    content: '';
+    position: absolute;
+    border: 1px solid rgba(0, 0, 0, 0.51);
+    bottom: 2px;
+    left: 4px;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
+}
+
+.task-form button:hover:after {
+    bottom: 2px;
+    left: 2px;
+}
+
+
+/*!*modal*!*/
+
+.menuContainer {
+    display: flex;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
     height: 100%;
 }
 
-.list-group-item {
-    padding: 0.75rem 0.75rem;
+.menu {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-/*.list-group-item {*/
-/*    position: relative;*/
-/*    display: block;*/
-/*    background-color: #fff;*/
-/*    border: 1px solid rgba(0,0,0,.125);*/
-/*}*/
-
-/* button styles */
-
-.btn-success {
-    color: #fff;
-    background-color: rgba(118, 19, 140, 0.6);
-    border-color: rgb(154, 37, 233);
-}
-
-.btn-outline-danger , .btn-primary{
-    color:  #b086d9;
-    border-color:  #b086d9;
-}
-
-div + div {
-    border-right: 1px dotted #222;
-}
-
-h3 {
-    text-align: center;
-}
-
-p {
-    margin: 0;
-    color: #222222;
-}
-
-.completed p {
-    text-decoration: line-through;
-}
-
-.in-progress p {
-    border-bottom: 1px dashed #222;
-}
-
-.drop {
-    background: linear-gradient(#eee, transparent);
+    justify-content: center;
+    top: 0;
+    left: 0;
+    background-color: rgb(134, 143, 165);
+    width: 476px;
+    min-height: 283px;
+    margin: auto;
+    /* padding: 0em; */
     border-radius: 4px;
 }
 
-/*notes*/
-.launch-modal {
-    margin: 10px;
+/*.menuTitle {*/
+/*    font-weight: bold;*/
+/*    font-size: 1.5em;*/
+/*    margin-bottom: 1em;*/
+/*}*/
+
+.menuDescription {
+    margin-bottom: 2em;
+    line-height: 1.5em;
+}
+
+/*.menuDescription textarea {*/
+/*    width: 100%;*/
+/*    height: 5em;*/
+/*    padding: 0.5em;*/
+/*    font-size: 1.1em;*/
+/*}*/
+
+.comment {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    margin-top: 4.5em;
+    padding: 1.5em;
+    font-size: 0.8em;
+}
+
+.textarea {
+    width: 60%;
+    height: 140px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+    margin-right: 0.5em;
+}
+
+.btn-save {
+    align-self: center;
+    background-color: #fff;
+    background-image: none;
+    background-position: 0 90%;
+    background-repeat: repeat no-repeat;
+    background-size: 4px 3px;
+    border-radius: 15px 225px 255px 15px ;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+    box-sizing: border-box;
+    color: #41403e;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Neucha, sans-serif;
+    font-size: 1rem;
+    line-height: 23px;
+    outline: none;
+    padding: .75rem;
+    text-decoration: none;
+    transition: all 235ms ease-in-out;
+    border-bottom-left-radius: 15px 255px;
+    border-bottom-right-radius: 225px 15px;
+    border-top-left-radius: 255px 15px;
+    border-top-right-radius: 15px 225px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+.btn-save:hover {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+    transform: translate(0, 2px);
+}
+.btn-save:focus {
+    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
+
+#save{
+    padding: 1rem 2rem;
+    background: rgb(255 255 255 / 50%);
+    border: white;
+}
+#save:hover{
+    background: rgb(255 255 255 / 70%);
+}
+
+
+/*modal*/
+
+
+.modal {
+    border-radius: 2rem;
+    position: fixed;
+    width: 110%;
+    height: 110%;
+    z-index: 5;
+    margin: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: block;
+    background: rgb(255 255 255 / 90%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.4s all;
+}
+.modal.active {
+    opacity: 1;
+    pointer-events: all;
+    visibility: visible;
+}
+.modal-content {
+    width: 40vw;
+    height: 40vh;
+    margin: 0 auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(112 112 112 / 90%);
+    border-radius: 20px;
+    transform: scale(0.8);
+    transition: 1s;
+    display: flex;
+    flex-direction: column;
+}
+.modal.active > .modal-content {
+    transform: scale(1);
+}
+.description-box {
+    min-width: 10vw;
+    min-height: 13vh;
+    border: 2px solid white;
+    margin: 1rem auto;
+    border-radius: 15px;
+}
+.close-btn {
+    margin: 1rem 1rem 1rem auto;
 }
